Fix missing brace

--- a/protocol/protocol.tex
+++ b/protocol/protocol.tex
@@ -203,6 +203,7 @@ No.
     \midrule
     EuroPar 2024        & March 2024      & September 2024\\
     SuperComputing 2024 & April 2024      & November 2024 \\
+    TBD                 & TBD             & TBD           \\
     \bottomrule
 \end{tabular}
   \caption{Considered Conferences and associated important dates}
@@ -311,7 +312,7 @@ Now open the \dfile\ in a text editor.
 If the \dfile\ uses any of the supported package management tools (\texttt{apt/dpkg}, \texttt{pip}, \texttt{git}, \texttt{misc}), add it to the Nickel description.
 
 
-\subsection{How to name the 
+\subsection{How to name the }
 
 \printbibliography
 
